...

    var displayName: String {
        switch self {
        case .none:
            return "Nie"
        case .daily:
            return "Täglich"
        case .weekly:
            return "Wöchentlich"
        case .biweekly:
            return "Zweiwöchentlich"
        case .monthly:
            return "Monatlich"
...
